test: Allow one to run tests locally
This commit aims to allow one to run tests (unit-tests) on their local
machine on the same way it is run on the CI system simply via running
`tox -e py36`.

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ passenv = GALAXY_*
 setenv =
     PIPENV_VERBOSITY=-1
     GALAXY_SECRET_KEY=secret
+    GALAXY_DB_PASSWORD=galaxy
 commands =
     bash ./bindings/build.sh
     pip install -e ./bindings/galaxy-pulp
